# sentiment_analysis

./: README.md  app.py  model.pkl  pyproject.toml  requirements.txt  sentiment_model.ipynb  train_model.py  training_metrics.json  vectorizer.pkl
