[project]
name = "sentiment-analysis-webapp"
version = "1.0.0"
description = "Single-folder Streamlit Sentiment Analysis app"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "scikit-learn>=1.4.0",
    "joblib>=1.4.0",
    "streamlit>=1.37.0",
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
]

[tool.uv]

[tool.uv.sources]

[project.scripts]
start-streamlit = "streamlit run app.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
